@@ -1,7 +1,7 @@
 @Suppress("ClassName")
 object versions {
-    const val kotlin = "1.4.0"
+    const val kotlin = "1.4.10"
     const val coroutines = "1.3.9"
-    const val ktor = "1.4.0"
-    const val serialization = "1.0.0-RC"
+    const val ktor = "1.4.1"
+    const val serialization = "1.0.0"
 }
