@@ -1,8 +1,6 @@
 package cash.andrew.mntrailconditions.data.api
 
 import cash.andrew.mntrailconditions.data.ApiEndpoint
-import cash.andrew.mntrailconditions.data.ApiEndpoints
-import cash.andrew.mntrailconditions.data.MORC_PRODUCTION_URL
 import cash.andrew.mntrailconditions.data.preference.Preference
 
 import com.facebook.stetho.okhttp3.StethoInterceptor
